iss#36 Add global CORS configuration and remove CORS for individual controllers, version 0.4.10